--- a/index.html
+++ b/index.html
@@ -9,12 +9,33 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css
-" rel="stylesheet"/>
+" rel="stylesheet" crossorigin="anonymous" />
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 <link rel="stylesheet" href="styles/portfolio.css">
   <title>Portfolio project</title>
+  <style>
+    h1 {
+  color: black;
+  font-family: "Playfair Display", serif;
+  font-weight: bold;
+}
+b{
+  color: red;
+}
+p {
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
+}
+
+  </style>
 </head>
 <body>
-  Hello world
+  <div class="d-flex bg-warning">
+      <h1>Hello world</h1>
+      <p>Hi there</p>
+      <i class="fab fa-instagram"></i>
+    </div>
+
 </body>
 </html>
