--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<script src="https://kit.fontawesome.com/410a49d34b.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
@@ -34,7 +34,8 @@ p {
   <div class="d-flex bg-warning">
       <h1>Hello world</h1>
       <p>Hi there</p>
-      <i class="fab fa-instagram"></i>
+      
+      <i class="fa-brands fa-square-instagram"></i>
     </div>
 
 </body>
